# education-mobile

./: .env.sample  .gitignore  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cicd.yml
apis/utils/: custom_exceptions.py  custom_ip.py  custom_pagination.py  custom_permissions.py  custom_response.py
apps/: __init__.py
apps/auth_app/: admin.py  enums.py  managers.py  models.py  signals.py  tasks.py  validators.py
apps/challenge_app/: apps.py  models.py
apps/core_app/: managers.py  models.py
apps/course_app/: admin.py  apps.py  models.py
apps/discount_app/: admin.py  apps.py  enums.py  models.py
apps/exam_app/: apps.py  models.py  signals.py
apps/gateway_app/: apps.py  models.py
apps/subscription_app/: apps.py  models.py
auth_app/: admin.py  models.py  signals.py
auth_app/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_initial.py  0003_alter_user_options.py  0003_remove_coach_is_active_remove_student_is_active.py  0004_city_is_active_state_is_active.py
base/: __init__.py  asgi.py  settings.py  urls.py
base/clasess/: gateway.py  send_sms.py
base/utils/: dj_celery.py  grand_section_access.py
challenge_app/: admin.py  models.py
challenge_app/migrations/: 0001_initial.py  0002_alter_challenge_options.py  (+7 more)
core_app/: admin.py  models.py
course_app/: admin.py  enums.py  models.py  validators.py
discount_app/: admin.py  models.py
exam_app/: admin.py  apps.py  models.py
gateway_app/: admin.py  models.py
scripts/: gunicorn.conf.py  start.sh
subscription_app/: admin.py  forms.py  managers.py  models.py
(+105 files in other folders)
